Fix code smells
Fix code smells based on SonarCloud report

Issue-ID: SDNC-1075
Signed-off-by: Ravi Pendurty <ravi.pendurty@highstreet-technologies.com>
Change-Id: I98be47a2c75f80aa5593aab2ed63e7abf1dcccc9
Signed-off-by: Ravi Pendurty <ravi.pendurty@highstreet-technologies.com>